Ensure proper wrapping of code blocks (closes #413)

--- a/app/assets/stylesheets/coderay.github.css
+++ b/app/assets/stylesheets/coderay.github.css
@@ -10,6 +10,12 @@
 
 .CodeRay pre {
   margin: 0px;
+  overflow-x: auto;
+  white-space: pre-wrap !important;
+  white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 div.CodeRay { }
